# HighTorque-MiniDog

./: BOM.xlsx  README.md  README_EN.md
1.Hardware/HTDM4438-OpenDog/: 304搭扣1.SLDPRT  304搭扣2.SLDPRT  304搭扣3.SLDPRT  304搭扣4.SLDPRT  3D_刀片接头转接板_2025-04-23 v2.SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M2.5×20].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M2.5×5].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×10].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×12].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×16].sldprt  GB╱T 70.1-2008[内六角圆柱头螺钉M3×20].sldprt  GB╱T 70.3-2008[内六角沉头螺钉M3×8].SLDPRT  HT-03B-主控盒子简化模型.SLDPRT  HTDW-4438正装0716(URDF0922).SLDPRT  HTP 02B-01-01A-箱体固定板01.SLDPRT  HTP 02B-01-01A-箱体固定板01.STEP  HTP 02B-01-01A-箱体固定板02.SLDPRT  HTP 02B-01-01A-箱体固定板02.STEP  M12开关.SLDPRT  M16开关.SLDPRT  主控盖与开关-盖板.SLDPRT  主控盖与开关-盖板.STEP  主控盖与开关.SLDPRT  主控盖与开关.STEP  侧面盖线板.SLDPRT  侧面盖线板.STEP  内六角塞打螺栓 5xM4x20.SLDPRT  内六角塞打螺栓 5xM4x20.STEP  卡簧M3.SLDPRT  大腿内侧1.SLDPRT  大腿内侧1.STEP  大腿内侧2.SLDPRT  大腿内侧2.STEP  大腿外侧1.SLDPRT  大腿外侧1.STEP  大腿外侧2.SLDPRT  大腿外侧2.STEP  大腿电机-小腿电机连接块.SLDPRT  大腿电机-小腿电机连接块.STEP  小腿1.SLDPRT  (+40 more)
1.Hardware/HTDM4438-OpenDogV1.5/: 304搭扣4.SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M2.5×20].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×10].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×5].sldprt  HT-03B-主控盒子简化模型.SLDPRT  HTP 02B-01-01A-箱体固定板01.SLDPRT  HTPW-24vPower battery V1简化模型.SLDPRT  M4防松螺母.SLDPRT  主控盖与开关.SLDPRT  内六角塞打螺栓 5xM4x20.SLDPRT  大腿外侧1.SLDPRT  大腿外侧2.SLDPRT  小腿1.SLDPRT  扭矩铰链 中号黑色1.SLDPRT  滚花热熔螺母 M3-3-4.2.SLDPRT  滚花热熔螺母 M3-4.5-4.5.SLDPRT  点胶倒边内六角-对锁-M3-8 1.SLDPRT  点胶倒边内六角-对锁-M3-8 2.SLDPRT  电机盖.SLDPRT  铜柱 M2.5x6.SLDPRT  铜柱 M3x6.SLDPRT  铝-CNC连杆.SLDPRT  髋部.SLDPRT
1.Hardware/HTDM4438-OpenDog（URDF）/: L_calf^总装配体.SLDPRT  R_calf^总装配体.SLDPRT
1.Hardware/HTDW4438-OpenDogV1.5/: 304搭扣1.SLDPRT  304搭扣2.SLDPRT  304搭扣3.SLDPRT  3D_刀片接头转接板_2025-04-23 v2.SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×12].SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×20].sldprt  HTDW-4438正装0716(URDF0922).SLDPRT  HTP 02B-01-01A-箱体固定板02.SLDPRT  M12开关.SLDPRT  M16开关.SLDPRT  主控盖与开关-盖板.SLDPRT  侧面盖线板.SLDPRT  大腿内侧1.SLDPRT  大腿内侧2.SLDPRT  大腿电机-小腿电机连接块.SLDPRT  小腿2.SLDPRT  扭矩铰链 中号黑色2.SLDPRT  拉杆1.SLDPRT  拉杆输出盘-发加工版本.SLDPRT  法兰挡边轴承MF74.SLDPRT  点胶倒边内六角-对锁-M3-10 1.SLDPRT  点胶倒边内六角-对锁-M3-10 2.SLDPRT  粉末冶金铜套 4-6-4.SLDPRT  粉末冶金铜套 5-7-4.SLDPRT  肘关节连接.SLDPRT  薄壁深沟球30-37-4.SLDPRT  角接触球轴承简化 5x13x4.SLDPRT  足端.SLDPRT  铝-CNC连杆-发加工版本.SLDPRT  销钉M3-8.SLDPRT  髋关节连接.SLDPRT  髋关节连接2.SLDPRT
1.Hardware/HTDW4438-OpenDog（URDF）/: L_foot^总装配体.SLDPRT  R_foot^总装配体.SLDPRT  hip^总装配体.SLDPRT
1.Hardware/htdw-4438 V1.2/urdf/: URDF.SLDASM.urdf
1.Hardware/htdw_4438/urdf/: htdw_4438.urdf
1.Hardware/htdw_4438_urdf/: CMakeLists.txt  package.xml
1.Hardware/htdw_4438_urdf/launch/: display.launch  gazebo.launch
1.Hardware/htdw_4438_urdf/urdf/: htdw_4438.csv  htdw_4438.urdf
1.Hardware/quadruped_robot V1.1/meshes/: FL_calf.STL  FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  (+7 more)
1.Hardware/自制高擎十二自由度四足/: 12mm铜柱.STEP  3D_刀片接头转接板_2025-04-23 v2.step  4xM3x20 塞打.SLDPRT  GB╱T 70.1-2008[内六角圆柱头螺钉M3×16].sldprt  GB╱T 70.3-2008[内六角沉头螺钉M3×16].sldprt  TPU打印-足端.STEP  固万基12.9 2.5mm-10mm内六角沉头.SLDPRT  固万基12.9 2.5mm-14mm内六角沉头.SLDPRT  打印件-大腿.SLDPRT  打印件-大腿2.SLDPRT  打印件-大腿外侧.SLDPRT  打印件-底部垫块.SLDPRT  打印件-拉杆1.SLDPRT  打印件-支撑装饰板.SLDPRT  打印件-电机2连接件.SLDPRT  打印件-肘关节连接.SLDPRT  打印件-肘关节连接.STEP  打印件-髋关节连接.SLDPRT  打印件-髋关节连接.STEP  碳板-固定板.SLDPRT  碳板-固定板.STEP  碳板-底板.SLDPRT  碳板-髋关节.SLDPRT  装配体-电机2连接.SLDASM  铝-连杆.SLDPRT  铝-连杆.STEP
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/: CMakeLists.txt  package.xml
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/config/: imu_broadcaster.yaml
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/include/dm_imu/: imu_driver.h  uart_port.hpp
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/include/dm_imu/hardware/: imu_hardware.hpp
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/launch/: imu_ros2_control.launch.py
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/resource/: dm_imu_hardware_plugin.xml
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/src/: imu_driver.cpp  test_imu.cpp  uart_port.cpp
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/src/hardware/: imu_hardware.cpp
2.Software/DM-IMU-ROS2/ros2_ws/src/dm_imu/urdf/: dmbot_imu.urdf.xacro
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/: CLAUDE.md  CMakeLists.txt  README.md  build_python.sh
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/example/: motor_msg_subscriber.cpp  motor_run.cpp
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/include/: parse_robot_params.hpp  serial_driver.hpp  serial_struct.hpp
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/include/hardware/: canboard.hpp  canport.hpp  motor.hpp  robot.hpp
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/lib/lcm/: CMakeLists.txt
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/lib/serial_cmake/: CMakeLists.txt
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/lib/serial_cmake/cmake/: serialConfig.cmake.in
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/python/: example_motor_control.py  example_motor_set_zero.py  pybind_wrapper.cpp  quick_test.py  robot_wrapper.py  test_import.py
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/robot_param/: 12dof_STM32H730_model_test_Orin_params.yaml  1dof_STM32H730_model_test_Orin_params.yaml  20dof_STM32H730_model_test_Orin_params.yaml  23dof_STM32H730_model_test_Orin_params.yaml  2dof_STM32H730_model_test_Orin_params.yaml  6dof_STM32H730_model_test_Orin_params.yaml  80dof_STM32H730_model_test_Orin_params.yaml  robot_config.yaml
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/src/: parse_robot_params.cpp  serial_driver.cpp
3.Document/7路CAN主控盒子资料/python版本程序/hightorque_robot/src/hardware/: canboard.cpp  canport.cpp  motor.cpp  robot.cpp
3.Document/高擎动力电池资料/: 【技术文档】HTB 系列电池使用说明.docx
自制高擎十二自由度四足/: 12mm铜柱.SLDPRT  3D_刀片接头转接板_2025-04-23 v2.SLDPRT  4-14-4平推滚子.SLDPRT  4-14-4平推滚子.STEP  GB╱T 70.1-2008[内六角圆柱头螺钉M3×12].sldprt  GB╱T 70.1-2008[内六角圆柱头螺钉M3×8].sldprt  GB╱T 70.3-2008[内六角沉头螺钉M3×8].sldprt  HTDW-4438正装0716(URDF0922).SLDPRT  M3x11铆钉.SLDPRT  M3螺母.SLDPRT  TPU打印-足端.SLDPRT  固万基12.9 2.5mm-8mm内六角沉头.SLDPRT  打印件-上板.SLDPRT  打印件-大腿外侧2.SLDPRT  打印件-小腿.SLDPRT  打印件-电机2连接件.STEP  打印件-髋关节连接.SLDPRT  碳板-底板.STEP  碳板-顶板.SLDPRT  碳板-髋关节.STEP
(+56 files in other folders)
